--- a/Resources/Prototypes/_CP14/Tiles/woodplanks.yml
+++ b/Resources/Prototypes/_CP14/Tiles/woodplanks.yml
@@ -28,6 +28,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksBurned
 
 - type: tile #Big
@@ -58,6 +59,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksBigBurned
 
 - type: tile #Cruci
@@ -88,6 +90,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksCruciformBurned
     
 - type: tile #Stairways
@@ -118,6 +121,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksStairwaysBurned
 
 #broken
@@ -149,6 +153,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksBurned
 
 - type: tile #Big
@@ -178,6 +183,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksBigBurned
   
 - type: tile #Cruci
@@ -207,6 +213,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksCruciformBurned
   
 - type: tile #Stairways
@@ -236,6 +243,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksStairwaysBurned
 
 
@@ -272,6 +280,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksBurned
 
 - type: tile #Big
@@ -302,6 +311,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksBigBurned
 
 - type: tile #Cruci
@@ -332,6 +342,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksCruciformBurned
     
 - type: tile #Stairways
@@ -362,6 +373,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksStairwaysBurned
 
 #broken
@@ -393,6 +405,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksBurned
 
 - type: tile #Big
@@ -422,6 +435,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksBigBurned
   
 - type: tile #Cruci
@@ -451,6 +465,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksCruciformBurned
   
 - type: tile #Stairways
@@ -480,6 +495,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksStairwaysBurned
 
 
@@ -516,6 +532,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksBurned
 
 - type: tile #Big
@@ -546,6 +563,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksBigBurned
 
 - type: tile #Cruci
@@ -576,6 +594,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksCruciformBurned
     
 - type: tile #Stairways
@@ -606,6 +625,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksStairwaysBurned
 
 #broken
@@ -637,6 +657,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksBurned
 
 - type: tile #Big
@@ -666,6 +687,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksBigBurned
   
 - type: tile #Cruci
@@ -695,6 +717,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksCruciformBurned
   
 - type: tile #Stairways
@@ -724,6 +747,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksStairwaysBurned
 
 
@@ -760,6 +784,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksBurned
 
 - type: tile #Big
@@ -790,6 +815,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksBigBurned
 
 - type: tile #Cruci
@@ -820,6 +846,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksCruciformBurned
     
 - type: tile #Stairways
@@ -850,6 +877,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksStairwaysBurned
 
 #broken
@@ -881,6 +909,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksBurned
 
 - type: tile #Big
@@ -910,6 +939,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksBigBurned
   
 - type: tile #Cruci
@@ -939,6 +969,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksCruciformBurned
   
 - type: tile #Stairways
@@ -968,6 +999,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksStairwaysBurned
 
 
@@ -1004,6 +1036,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksBurned
 
 - type: tile #Big
@@ -1034,6 +1067,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksBigBurned
 
 - type: tile #Cruci
@@ -1064,6 +1098,7 @@
   heatCapacity: 10000
   deconstructTools: [ Prying ]
   itemDrop: CP14WoodenPlanks1
+  weather: true
   burnedTile: CP14FloorWoodPlanksCruciformBurned
     
 - type: tile #Stairways
@@ -1094,6 +1129,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksStairwaysBurned
 
 #broken
@@ -1125,6 +1161,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksBurned
 
 - type: tile #Big
@@ -1154,6 +1191,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksBigBurned
   
 - type: tile #Cruci
@@ -1183,6 +1221,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksCruciformBurned
   
 - type: tile #Stairways
@@ -1212,6 +1251,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   burnedTile: CP14FloorWoodPlanksStairwaysBurned
 
 
@@ -1240,6 +1280,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   color: "#0d0906"
 
 - type: tile #Big
@@ -1263,6 +1304,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   color: "#0d0906"
   
 - type: tile #Cruci
@@ -1286,6 +1328,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   color: "#0d0906"
   
 - type: tile #Stairways
@@ -1309,6 +1352,7 @@
   footstepSounds:
     collection: FootstepWood
   heatCapacity: 10000
+  weather: true
   color: "#0d0906"
 ### /BURNED
 
