--- a/Resources/Prototypes/_CP14/Tiles/base.yml
+++ b/Resources/Prototypes/_CP14/Tiles/base.yml
@@ -36,5 +36,6 @@
   footstepSounds:
     collection: FootstepAsteroid
   heatCapacity: 10000
+  weather: true
   color: "#38373b"
   indestructible: true
