--- a/Resources/Prototypes/_CP14/Tiles/produced.yml
+++ b/Resources/Prototypes/_CP14/Tiles/produced.yml
@@ -25,6 +25,7 @@
   footstepSounds:
     collection: FootstepAsteroid
   heatCapacity: 10000
+  weather: true
 
 - type: tile
   editorHidden: false
@@ -57,6 +58,7 @@
   footstepSounds:
     collection: FootstepAsteroid
   heatCapacity: 10000
+  weather: true
 
 - type: tile
   editorHidden: false
@@ -81,6 +83,7 @@
   footstepSounds:
     collection: FootstepAsteroid
   heatCapacity: 10000
+  weather: true
 
 - type: tile
   editorHidden: false
@@ -105,6 +108,7 @@
   footstepSounds:
     collection: FootstepAsteroid
   heatCapacity: 10000
+  weather: true
 
 - type: tile
   editorHidden: false
@@ -129,6 +133,7 @@
   footstepSounds:
     collection: FootstepAsteroid
   heatCapacity: 10000
+  weather: true
 
 - type: tile
   editorHidden: false
@@ -151,3 +156,4 @@
   footstepSounds:
     collection: FootstepAsteroid
   heatCapacity: 10000
+  weather: true
